@@ -15,10 +15,18 @@
 	}
 
 </style>
+
+<!--
+<script type='text/javascript' src='legacy_jquery/jquery.js'></script>
+<script type='text/javascript' src='legacy_jquery/ui.core.js'></script>
+<script type='text/javascript' src='legacy_jquery/ui.draggable.js'></script>
+-->
 <script type='text/javascript' src='../jquery/jquery.js'></script>
 <script type='text/javascript' src='../jquery/ui.core.js'></script>
 <script type='text/javascript' src='../jquery/ui.draggable.js'></script>
+
 <script type='text/javascript' src='../fullcalendar/fullcalendar.js'></script>
+<!--<script type='text/javascript' src='../build/fullcalendar.min.js'></script>-->
 <script type='text/javascript' src='../fullcalendar/gcal.js'></script>
 <script type='text/javascript' src='jgrowl/jgrowl.js'></script>
 <script type='text/javascript'>
